# surviva

./: .gitignore  CMakeLists.txt  FUNDING.yml  README.md
.cache/clangd/index/: main.cpp.833E56CFC2FC32DC.idx  player.cpp.C9782507E78517F4.idx  player.hpp.44B2F19610E0F152.idx  scene.cpp.C0BF5E20C9C97FB0.idx  scene.hpp.0672523FF9752EDD.idx  sprite.cpp.35F45AE6D3343B9F.idx  sprite.hpp.888999B2FF0204DD.idx  texture.cpp.A1346AAD00A22A0D.idx  texture.hpp.F5CF8F11CEDA7DE5.idx
lib/: CMakeLists.txt
src/: CMakeLists.txt  camera.h  game_status.c  game_status.cpp  game_status.h  game_status.hpp  main.cpp  scene.cpp  scene.hpp  sprite.cpp  sprite.hpp
src/assets/: texture.cpp
src/behaviors/: CMakeLists.txt  clickable.cpp  clickable.hpp  collidable.cpp  collidable.hpp
src/components/: texture_component.cpp  texture_component.hpp
src/resources/: texture.cpp  texture.hpp
src/scenes/: CMakeLists.txt  test_scene.cpp  test_scene.hpp  topview.cpp  topview.hpp
src/sprites/: CMakeLists.txt  chest.cpp  chest.hpp  dummy.cpp  dummy.hpp  entity.cpp  entity.hpp  player.cpp  player.hpp  tree.cpp
